[package]
name = "nostr-rs-proto"
version = "0.1.0"
edition = "2021"
authors = ["Greg Heartsfield <scsibug@imap.cc>"]
description = "Protobuf types for nostr-rs-relay gRPC communication"

[dependencies]
prost = "0.11"
tonic = "0.8.3"

[build-dependencies]
tonic-build = { version="0.8.3", features = ["prost"] }
